--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.2.0",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.2.11",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.10.3",
     "react-modal": "^3.16.1",
     "react-toastify": "^10.0.5"
   }
