--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-autosuggest": "^10.1.0",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
     "react-modal": "^3.16.1",
     "react-toastify": "^10.0.5"
